--- a/Day1/day1.ipynb
+++ b/Day1/day1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1011,13 +1011,13 @@
        " ...]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "file = open('/Users/cuong/Documents/AdventOfCode2022/Day1/input.txt', 'r')\n",
+    "file = open('../Day1/input.txt', 'r')\n",
     "lines = file.readlines()\n",
     "lines"
    ]
@@ -1052,16 +1052,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n"
+      "204610\n"
      ]
     }
    ],
@@ -1069,7 +1067,8 @@
     "total = 0\n",
     "res = sorted(data)[-3:]\n",
     "for number in res:\n",
-    "  total += number"
+    "  total += number\n",
+    "print(total)"
    ]
   }
  ],
