--- a/Day2/day2.ipynb
+++ b/Day2/day2.ipynb
@@ -1072,10 +1072,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is score 15472\n"
+     ]
+    }
+   ],
+   "source": [
+    "# X means you need to lose\n",
+    "# Y means you need to draw\n",
+    "# Z means you need to win\n",
+    "expection_mapper = {\n",
+    "  \"X\": 1,\n",
+    "  \"Y\": 2,\n",
+    "  \"Z\": 3\n",
+    "}\n",
+    "score = 0\n",
+    "\n",
+    "for item in lines:\n",
+    "  characters = item.strip().split(' ')\n",
+    "  your_expectation = characters[1]\n",
+    "  opponent_choose = characters[0]\n",
+    "  \n",
+    "  if your_expectation == \"X\": # lose\n",
+    "    if opponent_choose == \"A\":\n",
+    "      score += expection_mapper[\"Z\"]\n",
+    "    elif opponent_choose == \"B\":\n",
+    "      score += expection_mapper[\"X\"]\n",
+    "    else:\n",
+    "      score += expection_mapper[\"Y\"]\n",
+    "  elif your_expectation == \"Y\": # draw\n",
+    "    if opponent_choose == \"A\":\n",
+    "      score += (expection_mapper[\"X\"] + 3)\n",
+    "    elif opponent_choose == \"B\":\n",
+    "      score += (expection_mapper[\"Y\"] + 3)\n",
+    "    else:\n",
+    "      score += (expection_mapper[\"Z\"] + 3)\n",
+    "  elif your_expectation == \"Z\": # win\n",
+    "    if opponent_choose == \"A\": # choose Rock\n",
+    "      score += (expection_mapper[\"Y\"] + 6)\n",
+    "    elif opponent_choose == \"B\": #choose Paper\n",
+    "      score += (expection_mapper[\"Z\"] + 6)\n",
+    "    else: # choose Scissors\n",
+    "      score += (expection_mapper[\"X\"] + 6)\n",
+    "print(\"This is score {}\".format(score))"
+   ]
   }
  ],
  "metadata": {
