--- a/Day3/day3.ipynb
+++ b/Day3/day3.ipynb
@@ -11,314 +11,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n"
+      "7826\n"
      ]
     }
    ],
@@ -334,9 +40,37 @@
     "  set2 = set(second_part)\n",
     "  key = ''.join(set1.intersection(set2))\n",
     "  values = dict[key]\n",
-    "  for value in values:\n",
-    "    result += value\n",
-    "  \n",
+    "  result += values\n",
+    "print(result)\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "400\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = 0\n",
+    "threeLines = range(0,len(lines), 3)\n",
+    "for num, line in enumerate(lines):\n",
+    "  if num in threeLines:\n",
+    "    groupLines = lines[num:num+3]\n",
+    "    data = list(map(lambda x: x.strip(), groupLines))\n",
+    "    common = ''.join(set.intersection(*map(set,data)))\n",
+    "    value = dict[key]\n",
+    "    print(value)\n",
+    "print(result)\n",
+    "    \n",
+    "    \n",
     "  \n",
     "  "
    ]
