take time to parse

--- a/Day5/day5.ipynb
+++ b/Day5/day5.ipynb
@@ -2,27 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 1   2   3 \n",
-      "{' ': [], '1': [], '2': [], '3': []}\n",
-      "{' ': 10, '1': 1, '2': 5, '3': 9}\n"
+      "9\n",
+      "JDTMRWCQJ\n"
      ]
     }
    ],
    "source": [
     "import re\n",
+    "\n",
     "file = open('../Day5/input.txt', 'r')\n",
     "stackCrate, cmd = file.read().split('\\n\\n')\n",
     "stackCrate = stackCrate.split('\\n')\n",
     "cmd = cmd.split('\\n')\n",
     "noc = stackCrate.pop()\n",
-    "\n"
+    "length = max((' '.join(noc.split(' ')).split()))\n",
+    "print(length)\n",
+    "stacks = [[] for _ in range(int(length))]\n",
+    "\n",
+    "for i in range(int(length) - 1): \n",
+    "  line = stackCrate[i]\n",
+    "  crates = line[1::4]\n",
+    "  for j in range(len(crates)):\n",
+    "    if crates[j] != ' ':\n",
+    "      stacks[j].append(crates[j])\n",
+    "stacks = [stack [::-1] for stack in stacks]      \n",
+    "\n",
+    "for line in cmd: \n",
+    "  value1, value2, value3 = map(int, re.findall('\\\\d+', line))\n",
+    "  # crates are moved one at a time\n",
+    "  value2 -= 1\n",
+    "  value3 -= 1\n",
+    "  for _ in range(value1):\n",
+    "    pop = stacks[value2].pop() # from\n",
+    "    stacks[value3].append(pop) # to\n",
+    "    \n",
+    "peaks = [stack[-1] for stack in stacks]\n",
+    "print(''.join(peaks))\n"
    ]
   }
  ],
