--- a/Day5/day5.ipynb
+++ b/Day5/day5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -11,6 +11,18 @@
      "text": [
       "9\n",
       "JDTMRWCQJ\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[16], line 41\u001b[0m\n\u001b[1;32m     38\u001b[0m   stacks[to]\u001b[39m.\u001b[39mextend(stacks[fro][\u001b[39m-\u001b[39mn:])\n\u001b[1;32m     39\u001b[0m   stacks[fro] \u001b[39m=\u001b[39m stacks[fro][:\u001b[39m-\u001b[39mn]\n\u001b[0;32m---> 41\u001b[0m zpeaks \u001b[39m=\u001b[39m [stack[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m] \u001b[39mfor\u001b[39;00m stack \u001b[39min\u001b[39;00m stacks]\n\u001b[1;32m     42\u001b[0m \u001b[39m# print(''.join(peaks))\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[16], line 41\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     38\u001b[0m   stacks[to]\u001b[39m.\u001b[39mextend(stacks[fro][\u001b[39m-\u001b[39mn:])\n\u001b[1;32m     39\u001b[0m   stacks[fro] \u001b[39m=\u001b[39m stacks[fro][:\u001b[39m-\u001b[39mn]\n\u001b[0;32m---> 41\u001b[0m zpeaks \u001b[39m=\u001b[39m [stack[\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m] \u001b[39mfor\u001b[39;00m stack \u001b[39min\u001b[39;00m stacks]\n\u001b[1;32m     42\u001b[0m \u001b[39m# print(''.join(peaks))\u001b[39;00m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
@@ -45,6 +57,50 @@
     "    \n",
     "peaks = [stack[-1] for stack in stacks]\n",
     "print(''.join(peaks))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VHJDDCWRD\n"
+     ]
+    }
+   ],
+   "source": [
+    "# part 2      \n",
+    "import re\n",
+    "\n",
+    "file = open('../Day5/input.txt', 'r')\n",
+    "stackCrate, cmd = file.read().split('\\n\\n')\n",
+    "stackCrate = stackCrate.split('\\n')\n",
+    "cmd = cmd.split('\\n')\n",
+    "noc = stackCrate.pop()\n",
+    "length = max((' '.join(noc.split(' ')).split()))\n",
+    "stacks = [[] for _ in range(int(length))]\n",
+    "\n",
+    "for i in range(int(length) - 1): \n",
+    "  line = stackCrate[i]\n",
+    "  crates = line[1::4]\n",
+    "  for j in range(len(crates)):\n",
+    "    if crates[j] != ' ':\n",
+    "      stacks[j].append(crates[j])\n",
+    "stacks = [stack [::-1] for stack in stacks]     \n",
+    "\n",
+    "for line in cmd:\n",
+    "  n, fro, to = map(int, re.findall('\\\\d+', line))\n",
+    "  fro -= 1\n",
+    "  to -= 1\n",
+    "  stacks[to].extend(stacks[fro][-n:])\n",
+    "  stacks[fro] = stacks[fro][:-n]\n",
+    "  \n",
+    "peaks = [stack[-1] for stack in stacks]\n",
+    "print(''.join(peaks))"
    ]
   }
  ],
